--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@emailjs/browser": "^3.11.0",
     "@uidotdev/usehooks": "^2.0.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -20,6 +21,6 @@
   },
   "scripts": {
     "start": "parcel ./index.html",
-    "build": "parcel build index.html" 
+    "build": "parcel build index.html"
   }
 }
